--- a/TreinamentoCtms/TreinamentoCtms.html
+++ b/TreinamentoCtms/TreinamentoCtms.html
@@ -12,18 +12,21 @@
 
 <body>
     <header>
-        <div class="menu_pagina">
-            <div class="img_menu">
-                <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
-                </a>
-            </div>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                </ul>
-            </nav>
-        </div>
+        <div class="container-fluid">
+            <div class="video-section">
+                <div class="menu_video">
+                    <a href="https://svriglobal.com/"><img class="logo" src="../assets/img/logo-science-valley.png"
+                            alt="Logo Science"></a>
+                    <div class="menu_buttons">
+                        <div>
+                            <h2 class="menu_title">Bem Vindo! <br>Assista o vídeo institucional</h2>
+                        </div>
+
+                    </div>
+                    <div class="menu_buttons">
+                        <a class="BtnMenu" href="/centraltreinamentos/centralTreinamentos.html">Treinamentos Science</a>
+                    </div>
+                </div>
     </header>
 
     <h2>Treinamento Plataforma CTMS</h2>
@@ -32,16 +35,13 @@
         <div class="imgtec">
             <img class="imgtec" src="../assets/img/Integração de Cursos.jpg" id="tech">
         </div>
-        
+
         <div class="Botoes_grid">
 
-            <div class="Botoes">
-                <button id="BotaoRegulatorio" class="botaovideo">CTMS REGULATÓRIO</button>
-            </div>
+            <a class="BtnMenu" href="/treinamentoregulatorioCTMS/TreinamentoRegulatorio.html">CTMS REGULATÓRIO</a>
 
-            <div class="Botoes">
-                <button id="BotaoFeasibility" class="botaovideo">CTMS FEASIBILITY</button>
-            </div>
+            <a class="BtnMenu" href="/treinamentofeasibility/TreinamentoFeasibility.html">CTMS FEASIBILITY</a>
+
 
         </div>
     </div>
