--- a/integracaoti/IntegracaoTI.html
+++ b/integracaoti/IntegracaoTI.html
@@ -9,21 +9,21 @@
         type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="menu_pagina">
-            <div class="img_menu">
-                <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
-                </a>
+<div class="container-fluid">
+        <div class="video-section">
+            <div class="menu_video">
+                <a href="https://svriglobal.com/"><img class="logo" src="../assets/img/logo-science-valley.png"
+                        alt="Logo Science"></a>
+                <div class="menu_buttons">
+                    <div>
+                        <h2 class="menu_title">Módulos Science</h2>
+                    </div>
+
+                </div>
+                <div class="menu_buttons">
+                    <a class="BtnMenu" href="/centraltreinamentos/centralTreinamentos.html">Treinamentos Science</a>
+                </div>
             </div>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <h2>MÓDULOS - SCIENCE</h2>
     <div class="painel">
         <div class="imgtec">
             <img class="imgtec" src="../assets/img/tecnologia.jpg" id="tech">
