--- a/politicas/politicasdone.html
+++ b/politicas/politicasdone.html
@@ -11,49 +11,50 @@
 </head>
 
 <body>
-    <header>
-        <div class="menu_pagina">
-            <div class="img_menu">
-                <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
-                </a>
+    <div class="container-fluid">
+        <div class="video-section">
+            <div class="menu_video">
+                <a href="https://svriglobal.com/"><img class="logo" src="../assets/img/logo-science-valley.png"
+                        alt="Logo Science"></a>
+                <div class="menu_buttons">
+                    <div>
+                        <h2 class="menu_title">Políticas e Diretrizes</h2>
+                    </div>
+
+                </div>
+                <div class="menu_buttons">
+                    <a class="BtnMenu" href="/centraltreinamentos/centralTreinamentos.html">Treinamentos Science</a>
+                </div>
             </div>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <div class="painel">
-        <div class="treinamentos">
-            <h2> ATENÇÃO!</h2>
-        </div>
-        <p>Caso seja a primeira vez que você esteja vendo as políticas, continue o fluxo normalmente.
-            Após o término da leitura, vá para a <b><br>Integração Tecnologia</b><br><br>
-            Se você só precisa se atualizar em relação as políticas, leia e finalize a integração com o
-            <b>formulário</b>
-        </p>
+            <div class="painel">
+                <div class="treinamentos">
+                    <h2> ATENÇÃO!</h2>
+                </div>
+                <p>Caso seja a primeira vez que você esteja vendo as políticas, continue o fluxo normalmente.
+                    Após o término da leitura, vá para a <b><br>Integração Tecnologia</b><br><br>
+                    Se você só precisa se atualizar em relação as políticas, leia e finalize a integração com o
+                    <b>formulário</b>
+                </p>
 
-        <div class="Botoes_grid">
-            <button id="Botaodiretrizes" class="botaovideo">Políticas e Diretrizes </button>
-            <button id="BotaoCodigoConduta" class="botaovideo"> Código de Conduta e Ética </button>
-            <button id="Botaoformdiretrizes" class="botaovideo"> Formulário a integração </button>
-        </div>
-        <script>
-            document.getElementById("Botaodiretrizes").onclick = function () {
-                window.location.href = "https://netorgft4487772.sharepoint.com/:f:/s/ScienceValley/EkJmpZ2uovJCsakM2u6JaUAB1BdrWDbTg8QhPpectsSdVw?e=KShpK4"
-            };
+                <div class="Botoes_grid">
+                    <button id="Botaodiretrizes" class="botaovideo">Políticas e Diretrizes </button>
+                    <button id="BotaoCodigoConduta" class="botaovideo"> Código de Conduta e Ética </button>
+                    <button id="Botaoformdiretrizes" class="botaovideo"> Formulário a integração </button>
+                </div>
+                <script>
+                    document.getElementById("Botaodiretrizes").onclick = function () {
+                        window.location.href = "https://netorgft4487772.sharepoint.com/:f:/s/ScienceValley/EkJmpZ2uovJCsakM2u6JaUAB1BdrWDbTg8QhPpectsSdVw?e=KShpK4"
+                    };
 
-            document.getElementById("BotaoCodigoConduta").onclick = function () {
-                window.location.href = "Codigodeconduta.html"
-            };
+                    document.getElementById("BotaoCodigoConduta").onclick = function () {
+                        window.location.href = "Codigodeconduta.html"
+                    };
 
-            document.getElementById("Botaoformdiretrizes").onclick = function () {
-                window.location.href = "../integracaoti/FormularioIntegracao.html"
-            };
-        </script>
+                    document.getElementById("Botaoformdiretrizes").onclick = function () {
+                        window.location.href = "../integracaoti/FormularioIntegracao.html"
+                    };
+                </script>
 </body>
 
 </html>
