--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Integração</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./assets/css/index.css" />
@@ -11,53 +11,32 @@
         type="image/x-icon" />
 </head>
 
-<body class="m-0">
-    <div class="d-flex min-vh-100">
-        <!-- Sidebar -->
-        <div class="sidebar bg-white text-white d-flex flex-column align-items-center align-items-sm-start p-3">
-            <a href="https://svriglobal.com/" class="mb-4 w-100 text-center text-sm-start">
-                <img src="./assets/img/logo-science-valley.png" alt="Logo Science" class="img-fluid logo-img" />
-            </a>
+<body>
+    <div class="container-fluid">
+        <div class="video-section">
+            <div class="menu_video">
+                <a href="https://svriglobal.com/"><img class="logo" src="../assets/img/logo-science-valley.png"
+                        alt="Logo Science"></a>
+                <div class="menu_buttons">
+                    <div>
+                        <h2 class="menu_title">Bem Vindo! <br>Assista o vídeo institucional</h2>
+                    </div>
 
-            <nav class="d-flex flex-column w-100">
-                <a href="centraltreinamentos/centralTreinamentos.html"><button class="btn btn-sidebar"
-                        id="Botaohubtreinamentos">Treinamentos Science</button></a>
-                <a
-                    href="https://netorgft4487772.sharepoint.com/sites/ScienceValley/Documentos%20Compartilhados/Forms/AllItems.aspx?id=%2Fsites%2FScienceValley%2FDocumentos%20Compartilhados%2FIntegra%C3%A7%C3%A3o%20Science%2FINTEGRA%C3%87%C3%83O%20CONTROLADORIA&p=true&ga=1"><button
-                        class="btn btn-sidebar" id="Botaohubtreinamentos">Integração
-                        Controladoria</button></a>
-                <a href="politicas\politicasdone.html"><button class="btn btn-sidebar"
-                        id="Botaohubtreinamentos">Políticas e
-                        Diretrizes</button></a>
-                <a href="integracaoti\IntegracaoTI.html"><button class="btn btn-sidebar"
-                        id="Botaohubtreinamentos">Integração
-                        Tecnologia</button></a>
-            </nav>
+                </div>
+                <div class="menu_buttons">
+                    <a class="BtnMenu" href="/centraltreinamentos/centralTreinamentos.html">Treinamentos Science</a>
+                </div>
+            </div>
+
+            <div class="videoTreinamento mt-3">
+                <iframe class="video-youtube"
+                    src="https://www.youtube-nocookie.com/embed/GYeC2IeSzSw?si=wGcz7ldayuQflnED"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
         </div>
-        <!-- Botão menu mobile -->
-        <button id="toggleSidebar" class="toggle-sidebar-btn d-md-none">☰</button>
-
-        <!-- Conteúdo principal -->
-
-        <main class="flex-grow-1 p-4" >
-            <h2>BEM VINDO!</h2>
-            <h4>Assista o vídeo institucional</h4>
-
-            <iframe class="video-youtube" src="https://www.youtube-nocookie.com/embed/GYeC2IeSzSw?si=wGcz7ldayuQflnED"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-        </main>
     </div>
-
-    <script>
-        const btn = document.getElementById('toggleSidebar');
-        const sidebar = document.querySelector('.sidebar');
-
-        btn.addEventListener('click', () => {
-            sidebar.classList.toggle('sidebar-expanded');
-        });
-    </script>
 </body>
 
 </html>
