--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/assets/css/HeaderBaseImgBotoes.css">
-    <img src="/assets/img/logo-science-valley.png" alt="Logo">
-
+    <link rel="stylesheet" type="text/css" href="./../../assets/css/HeaderBaseImgBotoes.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
     <style>
         body {
         background-color: #cdcecd;
@@ -58,7 +57,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
         </div>
