--- a/Sessao_Pops/REDCap.html
+++ b/Sessao_Pops/REDCap.html
@@ -59,7 +59,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div> 
                 <h2>REDCap</h2>
