--- a/Central_Treinamentos.html
+++ b/Central_Treinamentos.html
@@ -92,43 +92,43 @@
 
         <div class="card">
             <h2>Integração</h2>
-            <img src="../assets/img/integracao.png" alt="integracao">
+            <img src="./assets/img/integracao.png" alt="integracao">
             <button id="BotaoIntegração_geral" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>LGPD</h2>
-            <img src="../assets/img/Central de Proteção de Dados - RD Station.jpg" alt="LGPD">
+            <img src="./assets/img/Central de Proteção de Dados - RD Station.jpg" alt="LGPD">
             <button id="Botaolgpd" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Tecnologia</h2>
-            <img src="../assets/img/Redes de computadoras redes sociales _ Vector Premium.jpg" alt="Tecnologia">
+            <img src="./assets/img/Redes de computadoras redes sociales _ Vector Premium.jpg" alt="Tecnologia">
             <button id="Botaotecnologiacentral" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Qualidade</h2>
-            <img src="../assets/img/Qualidade.jpg" alt="Qualidade">
+            <img src="./assets/img/Qualidade.jpg" alt="Qualidade">
             <button id="BotaoQualidade" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Academy</h2>
-            <img src="../assets/img/Academy.jpg" alt="Academy">
+            <img src="./assets/img/Academy.jpg" alt="Academy">
             <button id="BotaoAcademy" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Sessão de Pops</h2>
-            <img src="../assets/img/Pops.png" alt="Sessão de Pops">
+            <img src="./assets/img/Pops.png" alt="Sessão de Pops">
             <button id="Botaopop" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Financeiro</h2>
-            <img src="../assets/img/FinanceiroPolo.jpg" alt="Financeiro">
+            <img src="./assets/img/FinanceiroPolo.jpg" alt="Financeiro">
             <button id="BotaoFinanceiroPolo" class="botaoAcesso">Acessar</button>
         </div>
 
