--- a/Tecnologia/Plataformas/SAP/Aula.html
+++ b/Tecnologia/Plataformas/SAP/Aula.html
@@ -11,7 +11,7 @@
     body {
       background-color: #cdcecd;
       background-image: linear-gradient(to right, #cdcecd 0%, #ffffff 30%, #ffffff 70%, #cdcecd 100%);
-      background-image: url("../../../assets/img/Fundo.webp");
+      background-image: url("./assets/img/Fundo.webp");
       background-size: auto;
       background-position: center;
     }
