--- a/Integração/Menu_Integracao.html
+++ b/Integração/Menu_Integracao.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Integração</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseImgBotoes.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/centralTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseImgBotoes.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/centralTreinamentos.css">
 
     <style>
         body {
