--- a/Tecnologia/Integração/Certificado_PortalChamado.html
+++ b/Tecnologia/Integração/Certificado_PortalChamado.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificado - Portal Chamado</title>
-    <link rel="stylesheet" type="text/css" href="../../../../../assets/css/Area_certificado.css">    
+    <link rel="stylesheet" type="text/css" href="../../assets/css/Area_certificado.css">    
 </head>
 
 <body>
     <header>
         
         <div class="menu_video">
-            <a href="https://svriglobal.com/"><img class="logo" src="../../../../../assets/img/logo-science-valley.png" alt="Logo Science"></a>
+            <a href="https://svriglobal.com/"><img class="logo" src="../../assets/img/logo-science-valley.png" alt="Logo Science"></a>
             <h2>Certificado - Portal Chamado</h2>
         </div>            
         
@@ -33,7 +33,7 @@
                 <button class="BtnMenu" id="painelTreinamento" class="botao-link" style="margin: 0px 40%;">Painel de Treinamento</button>
                 <script>
                     document.getElementById("painelTreinamento").onclick = function () {
-                    window.location.href = "../../../../Central_Treinamentos.html";
+                    window.location.href = "../../Central_Treinamentos.html";
                 };
                 </script>
 
