css formulario regulatorio

--- a/Tecnologia/Plataformas/CTMS/REGULATÓRIO/Aulas.html
+++ b/Tecnologia/Plataformas/CTMS/REGULATÓRIO/Aulas.html
@@ -50,7 +50,7 @@
       <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=313020e7-df5e-44dc-ada7-4bbb3987326d&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 3: Mudança de parametrização de fluxos de documentos</span><br><span class="lesson-duration">10 minutos</span></div>
       <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d60ff4da-fe72-455e-a6f7-5dbf2ce1af9e&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 4: Configurações pessoais</span><br><span class="lesson-duration">12 minutos</span></div>
       <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=bf95ec30-035a-4c1d-a983-e87b1b73ea20&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 5: Troca de documentos iniciais</span><br><span class="lesson-duration">17 minutos</span></div>
-      <div class="lesson" data-src="../Tecnologia/Plataformas/CTMS/Regulatório/Formulario_Regulatorio.html"><a href="../Tecnologia/Plataformas/CTMS/Regulatório/Formulario_Regulatorio.html">Formulario<br>5 minutos</a></div>
+      <div class="lesson" data-src="../REGULATÓRIO/Formulario_Regulatorio.html"><a href="../REGULATÓRIO/Formulario_Regulatorio.html">Formulario<br>5 minutos</a></div>
       
       
       <!-- Repita o padrão para todas as outras aulas, com o data-src correto -->
