--- a/Qualidade/Certificado_Qualidade.html
+++ b/Qualidade/Certificado_Qualidade.html
@@ -34,7 +34,7 @@
                 <button class="BtnMenu" id="painelTreinamento" class="botao-link" style="margin: 0px 40%;">Painel de Treinamento</button>
                 <script>
                     document.getElementById("painelTreinamento").onclick = function () {
-                    window.location.href = "../../../../Central_Treinamentos.html";
+                    window.location.href = "./../Central_Treinamentos.html";
                 };
                 </script>
 
