--- a/Central_Treinamentos.html
+++ b/Central_Treinamentos.html
@@ -109,6 +109,12 @@
         </div>
 
         <div class="card">
+            <h2>Facilities</h2>
+            <img src="./assets/img/Facilities-Management.jpg" alt="Facilities">
+            <button id="BotaoFacilities" class="botaoAcesso">Acessar</button>
+        </div>
+
+        <div class="card">
             <h2>Qualidade</h2>
             <img src="./assets/img/Qualidade.jpg" alt="Qualidade">
             <button id="BotaoQualidade" class="botaoAcesso">Acessar</button>
@@ -176,6 +182,9 @@
             window.location.href = "./Financeiro/Aulas.html";
         };
 
+        document.getElementById('BotaoFacilities').onclick = () => {
+            window.location.href = "./Facilities/Facilities.html";
+        };
 
         // document.getElementById('BotaoProceTi').onclick = () => {
         //     alert('Você clicou em Procedimentosda TI!');
